refactor: remove old share1 and share2 icons; new share SVG icon replaces previous versions; updating icon component schema + Drupal Lab config to keep things up to date

--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -69,7 +69,7 @@
           text: "Share",
           transform: "uppercase",
           icon: {
-            name: "share1",
+            name: "share",
             size: "medium"
           },
           toggle: {
