chore: setting scss vars defaults

--- a/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
+++ b/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
@@ -14,8 +14,8 @@ $bolt-font-size--medium-bp: bolt-rem(bolt-breakpoint(medium));
 /* ------------------------------------ *\
   Scale
 \* ------------------------------------ */
-$bolt-font-size--xxxlarge--max: 3.083rem;
-$bolt-font-size--xxxlarge--min: 2.275rem;
+$bolt-font-size--xxxlarge--max: 3.083rem !default;
+$bolt-font-size--xxxlarge--min: 2.275rem !default;
 $bolt-font-size--xxlarge: 1.781rem;
 $bolt-font-size--xlarge: 1.417rem;
 $bolt-font-size--large: 1.111rem;
