--- a/packages/core/styles/01-settings/settings-global/_settings-global.scss
+++ b/packages/core/styles/01-settings/settings-global/_settings-global.scss
@@ -10,8 +10,8 @@
 \* ------------------------------------ */
 
 // Global Min / Max Base Font Size
-$bolt-base-font-size--min: 15px;
-$bolt-base-font-size--max: 18px;
+$bolt-base-font-size--min: 15px !default;
+$bolt-base-font-size--max: 18px !default;
 
 // Async font loading classes.
 $bolt-fonts--subset-loaded-class: 'js-fonts-subset-loaded' !default;
