--- a/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
+++ b/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
@@ -9,7 +9,7 @@
 
 // Unit on which all spacing is based
 $bolt-spacing-gutter: 2rem;
-$bolt-spacing-leading: 1.65;
+$bolt-spacing-leading: 1.65 !default;
 $bolt-spacing-squished: 0.5;
 $bolt-spacing-stretched: 1.5;
 
