--- a/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
+++ b/packages/core/styles/01-settings/settings-font-family/_settings-font-family.scss
@@ -18,7 +18,7 @@
 $bolt-font-family--sans-fallback:
   -apple-system, BlinkMacSystemFont, /* [1] */
   'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', /* [2] */
-  'Helvetica Neue', sans-serif;
+  'Helvetica Neue', sans-serif !default;
 $bolt-font-family--serif: 'Georgia', serif;
 $bolt-font-family--mono-fallback: monospace;
 
@@ -26,8 +26,8 @@ $bolt-font-family--mono-fallback: monospace;
 /*
  * Custom web font stacks
  */
-$bolt-font-family--sans:  'Open Sans', 'Helvetica Neue', sans-serif;
-$bolt-font-family--sans-subset: 'OpenSansSubset', 'Helvetica Neue', sans-serif;
+$bolt-font-family--sans:  'Open Sans', 'Helvetica Neue', sans-serif !default;
+$bolt-font-family--sans-subset: 'OpenSansSubset', 'Helvetica Neue', sans-serif !default;
 $bolt-font-family--serif: 'Georgia', serif;
 $bolt-font-family--mono:  'Courier New', monospace;
 
