fix: chevron aligment fix

--- a/packages/components/bolt-breadcrumb/src/breadcrumb.scss
+++ b/packages/components/bolt-breadcrumb/src/breadcrumb.scss
@@ -36,6 +36,7 @@ bolt-breadcrumb {
 
     display: inline-block;
     position: relative;
+    top: -1px;
     width: bolt-v-spacing(xsmall);
     height: bolt-v-spacing(xsmall);
     content: '';
