--- a/packages/components/bolt-navbar/navbar-brand.twig
+++ b/packages/components/bolt-navbar/navbar-brand.twig
@@ -2,7 +2,7 @@
   <div class="c-bolt-navbar__brand-item">
     {% include "@bolt/icon.twig" with {
       "name": icon.name,
-      "size": "large"
+      "size": "medium"
     } only %}
   </div>
 
