wire up navbar title link, add PL demo

--- a/packages/components/bolt-navbar/navbar-brand.twig
+++ b/packages/components/bolt-navbar/navbar-brand.twig
@@ -11,7 +11,8 @@
       "size": "large",
       "weight": "semibold",
       "tag": tag,
-      "text": text
+      "text": text,
+      "url": url,
     } only %}
   </div>
 </div>
