styles: adding style overrides

--- a/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
+++ b/packages/core/styles/01-settings/settings-spacing/_settings-spacing.scss
@@ -24,7 +24,7 @@ $bolt-spacing-values: (
   'large':   2,
   'xlarge':  4,
   'xxlarge': 8
-);
+) !default;
 @include export-data('spacing/scale.bolt.json', $bolt-spacing-values);
 
 $bolt-spacing-sizes: ();
