icon is linkable in navbar

--- a/apps/pattern-lab/src/_patterns/02-components/headline/25-headline-icon-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/25-headline-icon-variations.twig
@@ -4,3 +4,11 @@
     name: "search",
   }
 } only %}
+
+{% include "@bolt-components-headline/headline.twig" with {
+  text: "Headline Prefixed with Icon",
+  icon: {
+    name: "search",
+    position: "before"
+  }
+} only %}
