--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -17,6 +17,10 @@
 {% set style = style | default(schema.properties.style.default) %}
 {% set type = type in types ? type : "text" %}
 {% set size = size | default(schema.properties.size.default) %}
+{% if icon %}
+  {# Covers backward compatibility with use of both left and before to describe icon position #}
+  {% set iconPosition = icon.position == "left" ? "before" : icon.position  %}
+{% endif %}
 
 {% set prefix = "c-bolt-" %}
 {% set baseClass = prefix ~ type %}
@@ -45,7 +49,7 @@
 {% endif %}
 
 <{{ tag }} {{ attributes.addClass(classes) }}>
-  {% if icon and not url and icon.position == "left" %}
+  {% if icon and not url and iconPosition == "before" %}
     <span class="{{ "#{baseClass}__icon" }}">
       {% include "@bolt/icon.twig" with icon only %}
     </span>
@@ -64,7 +68,7 @@
     {% endif %}
   </span>
 
-  {% if icon and not url and icon.position != "left" %}
+  {% if icon and not url and iconPosition != "before" %}
     <span class="{{ "#{baseClass}__icon" }}">
       {% include "@bolt/icon.twig" with icon only %}
     </span>
