styles: redefine headline sizes

--- a/apps/pattern-lab/src/styles/settings.lang-ja.scss
+++ b/apps/pattern-lab/src/styles/settings.lang-ja.scss
@@ -19,13 +19,25 @@ $bolt-base-font-size--min: 14px;
 $bolt-base-font-size--max: 17px;
 
 
-// Biggest headline reduced to the mininum size for better hero display.
+// Redefined headline sizes.
 $bolt-font-size--xxxlarge--max: 2.25rem;
 $bolt-font-size--xxxlarge--min: 2.25rem;
+$bolt-font-size--xxlarge:       1.75rem;
+$bolt-font-size--xlarge:        1.425rem;
+$bolt-font-size--large:         1.125rem;
+
+$bolt-line-height--xxxlarge:    1.14*1.1;
+$bolt-line-height--xxlarge:     1.31*1.1;
+$bolt-line-height--xlarge:      1.35*1.1;
+$bolt-line-height--large:       1.45*1.1;
+$bolt-line-height--medium:      1.65*1.1;
+$bolt-line-height--small:       1.51*1.1;
+$bolt-line-height--xsmall:      1.45*1.1;
+$bolt-line-height--tight:       1.111*1.1;
 
 
 // Increase all line-heights by 15% because all Japanese characters have the same width and height, it's similar to reading in all caps.
-$bolt-spacing-leading: 1.8;
+/*$bolt-spacing-leading: 1.8;*/
 
 
 // Spacing values reduced to create more compact and monospace aesthetics.
