--- a/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
+++ b/packages/core/styles/01-settings/settings-font-size/_settings-font-size.scss
@@ -16,22 +16,22 @@ $bolt-font-size--medium-bp: bolt-rem(bolt-breakpoint(medium));
 \* ------------------------------------ */
 $bolt-font-size--xxxlarge--max: 3.083rem !default;
 $bolt-font-size--xxxlarge--min: 2.275rem !default;
-$bolt-font-size--xxlarge: 1.781rem;
-$bolt-font-size--xlarge: 1.417rem;
-$bolt-font-size--large: 1.111rem;
+$bolt-font-size--xxlarge: 1.781rem !default;
+$bolt-font-size--xlarge: 1.417rem !default;
+$bolt-font-size--large: 1.111rem !default;
 $bolt-font-size--medium: 1rem;
 $bolt-font-size--small: 0.9rem;
 $bolt-font-size--xsmall: 0.8rem;
 
 
-$bolt-line-height--xxxlarge: 1.14;
-$bolt-line-height--xxlarge: 1.31;
-$bolt-line-height--xlarge: 1.35;
-$bolt-line-height--large: 1.45;
-$bolt-line-height--medium: 1.65;
-$bolt-line-height--small: 1.51;
-$bolt-line-height--xsmall: 1.45;
-$bolt-line-height--tight: 1.111;
+$bolt-line-height--xxxlarge: 1.14 !default;
+$bolt-line-height--xxlarge: 1.31 !default;
+$bolt-line-height--xlarge: 1.35 !default;
+$bolt-line-height--large: 1.45 !default;
+$bolt-line-height--medium: 1.65 !default;
+$bolt-line-height--small: 1.51 !default;
+$bolt-line-height--xsmall: 1.45 !default;
+$bolt-line-height--tight: 1.111 !default;
 
 
 
