--- a/apps/pattern-lab/src/styles/settings.lang-ja.scss
+++ b/apps/pattern-lab/src/styles/settings.lang-ja.scss
@@ -26,18 +26,14 @@ $bolt-font-size--xxlarge:       1.75rem;
 $bolt-font-size--xlarge:        1.425rem;
 $bolt-font-size--large:         1.125rem;
 
-$bolt-line-height--xxxlarge:    1.14*1.1;
-$bolt-line-height--xxlarge:     1.31*1.1;
-$bolt-line-height--xlarge:      1.35*1.1;
-$bolt-line-height--large:       1.45*1.1;
-$bolt-line-height--medium:      1.65*1.1;
-$bolt-line-height--small:       1.51*1.1;
-$bolt-line-height--xsmall:      1.45*1.1;
-$bolt-line-height--tight:       1.111*1.1;
-
-
-// Increase all line-heights by 15% because all Japanese characters have the same width and height, it's similar to reading in all caps.
-/*$bolt-spacing-leading: 1.8;*/
+$bolt-line-height--xxxlarge:    (1.14 * 1.1);
+$bolt-line-height--xxlarge:     (1.31 * 1.1);
+$bolt-line-height--xlarge:      (1.35 * 1.1);
+$bolt-line-height--large:       (1.45 * 1.1);
+$bolt-line-height--medium:      (1.65 * 1.1);
+$bolt-line-height--small:       (1.51 * 1.1);
+$bolt-line-height--xsmall:      (1.45 * 1.1);
+$bolt-line-height--tight:       (1.111 * 1.1);
 
 
 // Spacing values reduced to create more compact and monospace aesthetics.
