--- a/packages/components/bolt-headline/src/_tools.headlines.scss
+++ b/packages/components/bolt-headline/src/_tools.headlines.scss
@@ -8,6 +8,9 @@
   @include bolt-headline-text-transform;
 
   display: block;
+  // display: flex; // @todo: uncomment when fixing headline flex behavior
+  // flex-flow: row nowrap; // @todo: uncomment when fixing headline flex behavior
+
   color: inherit;
   color: var(--bolt-theme-heading, inherit);
 
