--- a/packages/components/bolt-navbar/navbar-brand.twig
+++ b/packages/components/bolt-navbar/navbar-brand.twig
@@ -1,17 +1,16 @@
 <div class="c-bolt-navbar__brand">
   <div class="c-bolt-navbar__brand-item">
-    {% include "@bolt/icon.twig" with {
-      "name": icon.name,
-      "size": "large"
-    } only %}
-  </div>
-
-  <div class="c-bolt-navbar__brand-item">
     {% include "@bolt/text.twig" with {
       "size": "large",
       "weight": "semibold",
       "tag": tag,
-      "text": text
+      "text": text,
+      "url": url,
+      "icon": {
+        "name": icon.name,
+        "size": "medium",
+        "position": "before",
+      }
     } only %}
   </div>
 </div>
