fix: update overflow rule in Nav component to scroll "auto" so scroll bars only show up when absolutely necessary

--- a/packages/components/bolt-nav/nav.scss
+++ b/packages/components/bolt-nav/nav.scss
@@ -22,7 +22,7 @@ bolt-nav {
   flex-direction: column;
   position: relative;
   list-style: none;
-  overflow: scroll;
+  overflow: auto;
 
   @include respond-to(small) {
     flex-direction: row;
