--- a/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
+++ b/packages/global/styles/05-objects/objects-flag/_objects-flag.scss
@@ -26,6 +26,7 @@ $bolt-flag-alignments: (
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
+  width: 100%; // Required so IE11 properly calculates the component's layout (and doesn't overflow content) when flex / inline-flex items are nested inside of the flag body
 }
 
 
