Text Component -- Added size (font), display, and align options

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -1,6 +1,9 @@
 <bolt-text
     weight="bold"
     font-style="italic"
+    size="xxlarge"
+    display="block"
+    align="center"
 >
   My awesome bolt - text component yo!
 </bolt-text>
