Text Component -- Added transform, letter-spacing, line-height, and quoted styles

--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -4,6 +4,10 @@
     size="xxlarge"
     display="block"
     align="center"
+    transform="uppercase"
+    letter-spacing="narrow"
+    line-height="tall"
+    quoted
 >
   My awesome bolt - text component yo!
 </bolt-text>
