--- a/packages/core/styles/index.scss
+++ b/packages/core/styles/index.scss
@@ -15,5 +15,5 @@
     left: 50%;
     width: 100%; //fallback if vw not supported.
     width: 100vw;
-    margin: -0.25px -50vw; //-0.25px is needed to patch rendering issue with firefox
+    margin: -0.5px -50vw; //-0.5px is currently needed to patch a rendering bug in Firefox (when combined with layers being hardware accelerated)
 }
