Hotfix/firefox rendering fractional pixels (#663)
* add patch for rendering issue in firefox

* Update index.scss

* Update index.scss

--- a/packages/core/styles/index.scss
+++ b/packages/core/styles/index.scss
@@ -17,4 +17,6 @@
     width: 100vw;
     margin-left: -50vw;
     margin-right: -50vw;
+    margin-top: -0.5px; //-0.5px is currently needed to patch a rendering bug in Firefox (when combined with layers being hardware accelerated)
+    margin-bottom: -0.5px; //-0.5px is currently needed to patch a rendering bug in Firefox (when combined with layers being hardware accelerated)
 }
